[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "scab-player"
version = "1.1.1"
description = "自炊オーディオブックプレイヤー"
authors = ["mikoto2000@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
diesel = { version = "2.2.1", features = ["sqlite"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
feed-rs = "2.0.0"
md5 = "0.7.0"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2.0.1"
http-range = "0.1.5"
http = "1.1.0"
percent-encoding = "2.3.1"
getrandom = "0.2.15"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
